# sample-intranet

./: README.md  docker-compose.shared.yml
backend-go/: DOCKER_GUIDE.md  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  main.go  setup_db.sql
backend-go/config/: config.yaml
backend-go/internal/auth/: jwt.go
backend-go/internal/config/: config.go
backend-go/internal/database/: database.go
backend-go/internal/handlers/: user.go
backend-go/internal/middleware/: auth.go
backend-go/internal/models/: user.go
backend-go/internal/repositories/: user.go
backend-go/internal/routes/: routes.go
backend-go/internal/services/: user.go
backend-go/scripts/: test.sh
backend-java/: Dockerfile  README.md  docker-compose.yml  pom.xml
backend-nodejs/: Dockerfile  README.md  docker-compose.yml  env.example  package.json  tsconfig.json
backend-nodejs/prisma/: schema.prisma
backend-nodejs/src/: server.ts
backend-nodejs/src/controllers/: user.controller.ts
backend-nodejs/src/routes/: user.routes.ts
backend-php/: Dockerfile  README.md  composer.json  docker-compose.yml
backend-php/public/: index.php
backend-php/src/: dependencies.php  middleware.php  routes.php  settings.php
backend-python/: Dockerfile  README.md  auth.py  config.py  database.py  docker-compose.yml  env_example.txt  main.py  models.py  requirements.txt  schemas.py
backend-rust/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
backend-rust/src/: config.rs  database.rs  main.rs  middleware.rs  models.rs  services.rs
backend-rust/src/handlers/: auth.rs  mod.rs  users.rs
(+30 files in other folders)
